--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,19 +22,17 @@ classifiers = [
 ]
 requires-python = '>= 3.8'
 requires = [
-    'numpy',
-    'torch',
-    'pandas',
-    'anndata',
-    'tqdm',
-    'setuptools_scm',
-    'pytoml',
-    'scipy',
-    'scikit-learn',
-    'scanpy',
-    'networkx',
-    'matplotlib',
-    'seaborn',
+    'numpy>=1.22.3',
+    'torch>=1.10.0',
+    'pandas>=1.3.4',
+    'anndata>=0.7.6',
+    'tqdm>=4.50.2',
+    'scipy>=1.7.1',
+    'scikit-learn>=0.23.2',
+    'scanpy>=1.7.1',
+    'networkx>=2.5',
+    'matplotlib>=3.4.3',
+    'seaborn>=0.11.0'
 ]
 
 [tool.flit.metadata.requires-extra]
