--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ requires = [
     'scanpy>=1.7.1',
     'networkx>=2.5',
     'matplotlib>=3.4.3',
-    'seaborn>=0.11.0'
+    'seaborn>=0.11.0',
+    'setuptools_scm',
+    'pytoml',
 ]
 
 [tool.flit.metadata.requires-extra]
