--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ build-backend = 'flit_core.buildapi'
 module = 'HoloNet'
 author = 'Li Haochen'
 author-email = 'lhc17@mails.tsinghua.edu.cn'
-home-page = 'https://github.com/lhc17/HoloNet/'
+home-page = 'https://github.com/lhc17/HoloNet'
 description-file = "README.md"
 classifiers = [
     'License :: OSI Approved :: BSD License',
@@ -35,9 +35,19 @@ requires = [
     'seaborn>=0.11.0',
     'setuptools_scm',
     'pytoml',
+    
+    'gtfparse>=1.2.1',
+    'pycairo>=1.20; sys_platform == "win32"',
+    'leidenalg',
+    'pyreadr'
 ]
 
 [tool.flit.metadata.requires-extra]
+test = [
+    'pytest',
+    'black',
+    'pre-commit',
+]
 doc = [
     'sphinx>=4.2',
     'sphinx_rtd_theme>=0.4',
@@ -54,6 +64,10 @@ doc = [
 
 [tool.flit.metadata.urls]
 Documentation = 'https://holonet-doc.readthedocs.io/en/latest/'
+
+[tool.pytest.ini_options]
+minversion = 6.0
+norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']
 
 [tool.setuptools_scm]
 git_describe_command = "git describe --dirty --tags --long --match v*.*.*"
