--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ requires = [
     'gtfparse>=1.2.1',
     'pycairo>=1.20; sys_platform == "win32"',
     'leidenalg',
-    'pyreadr'
+    'pyreadr',
 ]
 
 [tool.flit.metadata.requires-extra]
@@ -60,7 +60,6 @@ doc = [
     'jupyter_client',
     'ipykernel',
     'myst-parser',
-    'HoloNet'
 ]
 
 [tool.flit.metadata.urls]
