--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ module = 'HoloNet'
 author = 'Li Haochen'
 author-email = 'lhc17@mails.tsinghua.edu.cn'
 home-page = 'https://github.com/lhc17/HoloNet'
-description-file = "README.md"
+description-file = "README.rst"
 classifiers = [
     'License :: OSI Approved :: BSD License',
     'Development Status :: 4 - Beta',
