--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ author-email = 'lhc17@mails.tsinghua.edu.cn'
 home-page = 'https://github.com/lhc17/HoloNet'
 description-file = "README.rst"
 classifiers = [
-    'License :: OSI Approved :: BSD License',
-    'Development Status :: 4 - Beta',
+    'License :: OSI Approved :: MIT License',
+    'Development Status :: 0 - Beta',
     'Intended Audience :: Developers',
     'Intended Audience :: Science/Research',
     'Programming Language :: Python :: 3',
